added session variable for redirect on submission of an app deployment request to select the job queue tabpage on the home page as the selected tab; removed TestJob from reload; added formatting to the job queue listing page for running jobs;

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -33,8 +33,11 @@
 </div>
 
 <script>
-  // setup the grid after the page has finished loading
   $(document).ready(function () {
     $("#tabs").tabs();
+    <% if session[:select_tabpage] %>
+      $("#tabs").tabs("option", "active", <%= session[:select_tabpage] %>);
+      <% session.delete(:select_tabpage) %>
+    <% end %>
   });
 </script>
