--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -6,8 +6,8 @@
   <thead>
   <tr>
     <th>Job Name</th>
-    <th>Status</th>
-    <th colspan="2" width="25%">Job Execution Times</th>
+    <th width="10%">Status</th>
+    <th colspan="2" width="20%">Job Execution Times</th>
     <th>Elapsed Time</th>
     <th>User</th>
     <th>Last Error</th>
@@ -21,7 +21,11 @@
   </tbody>
 </table>
 <br/>
-
+<style>
+  tr.queue {
+    vertical-align: text-top;
+  }
+</style>
 <script>
   $(document).ready(function (e) {
     var fields = ['job_name', 'status', 'execution_times', 'elapsed_time', 'user', 'last_error', 'result'];
@@ -31,30 +35,43 @@
 
       $.each(data, function (index, item) {
         // create the row adding a data-job_id attribute
-        var row = $('<tr>').data('job_id', item['job_id']);
+        var row = $('<tr>').addClass('queue').data('job_id', item['job_id']);
 
         $.each(fields, function (index, field) {
+          var item_value = item[field + ''];
+
           if (field === 'status') {
-            row.append($('<td>').text(gon.job_status_constants[item[field + '']]));
+            var row_status = $('<td>').text(gon.job_status_constants[item_value]);
+
+            if (item_value === <%= PrismeJobConstants::Status::STATUS_HASH[:QUEUED] %> ||
+                item_value === <%= PrismeJobConstants::Status::STATUS_HASH[:RUNNING] %>) {
+              row_status.prepend($('<i class="fa fa-cog fa-fw fa-spin" aria-hidden="true"></i>'));
+            }
+            row.append(row_status);
           } else if (field === 'execution_times') {
             //'scheduled_at', 'enqueued_at', 'started_at', 'completed_at',
-            row.append($('<td>').css('text-align','right').html("Scheduled At:<br>Enqueued At:<br>Started At:<br>Completed At:"));
-            // times formatted with  <br>s
-            var times = moment(item['scheduled_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
+            row.append($('<td>').css('text-align','right').html("Enqueued At:<br>Scheduled At:<br>Started At:<br>Completed At:"));
 
-            if (item['enqueued_at'] !== '') {
-              times += moment(item['enqueued_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
-            } else {
-              times += 'Not In Queue<br>'
+            // times formatted with  <br>s
+            var times = 'Not Yet Enqueued<br>';
+
+            if (item['enqueued_at'] !== null) {
+              times = moment(item['enqueued_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
             }
 
-            if (item['started_at'] !== '') {
+            if (item['scheduled_at'] !== null) {
+              times += moment(item['scheduled_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
+            } else {
+              times += 'Not Yet Scheduled<br>'
+            }
+
+            if (item['started_at'] !== null) {
               times += moment(item['started_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
             } else {
               times += 'Not Yet Started<br>'
             }
 
-            if (item['completed_at'] !== '') {
+            if (item['completed_at'] !== null) {
               times += moment(item['completed_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
             } else {
               times += 'Not Yet Completed<br>'
@@ -62,7 +79,7 @@
             row.append($('<td>').html(times));
           }
           else {
-            row.append($('<td>').text(item[field + '']));
+            row.append($('<td>').text(item_value));
           }
         });
         $('#' + tableId + ' tbody').append(row);
