checkpoint - added select2 gem for formatting select inputs and code for including additional converter options based on the currently selected inputs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
  *= require jquery.steps-1.1.0/jquery.steps
  * require ag-grid
  *= require jquery-ui
+ *= require select2
+ *= require select2-bootstrap
  * this is for styling of the ajax_flash notification code
  *= require animate
  *= require_tree .
