--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,8 +12,9 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Terminology
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="<%= terminology_source_contents_path %>" onclick="polling.checkPolling('upload');">Source Upload</a></li>
-              <li><a href="<%= terminology_converter_path %>" onclick="polling.checkPolling('converter');">Converter</a></li>
+              <li><a href="<%= terminology_source_packages_path %>" onclick="polling.checkPolling('tsp_upload');">Source Package Upload</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="<%= terminology_converter_path %>" onclick="polling.checkPolling('converter');">Convert Terminology</a></li>
             </ul>
           </li>
           <!--<li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>-->
@@ -27,7 +28,7 @@
             <ul class="dropdown-menu">
               <li><a href="<%= list_users_path %>" onclick="polling.checkPolling('admin_user_edit');">Edit User Permissions</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="<%= services_path %>" onclick="polling.checkPolling('deployer');">Service Provisioning</a></li>
+              <li><a href="<%= services_path %>" onclick="polling.checkPolling('services');">Service Provisioning</a></li>
             </ul>
           </li>
       <% end %>
