fixed image pathing issue

--- a/app/assets/stylesheets/fileinput.scss
+++ b/app/assets/stylesheets/fileinput.scss
@@ -9,7 +9,7 @@
  * https://github.com/kartik-v/bootstrap-fileinput/blob/master/LICENSE.md
  */
 //$image-path: "'../img" !default;
-$image-path: "'../images" !default;
+$image-path: "'../images/bootstrap_fileinput" !default;
 $preview-size: 160px !default;
 
 .file-loading {
