--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -76,13 +76,13 @@
             <%= text_field_tag 'version' %><br><br>
 
             <%= label_tag 'extension_name', 'Extension Name' %><br>
-            <%= select_tag 'extension_name',
-                           options_for_select(['us', 'fr', 'es']),
-                           {:prompt => '-- Select an Extension --'} %><br><br>
+            <%= text_field_tag 'extension_name' %><br><br>
 
             <div id="uploads" style="display: none">
-              <br>
               <h4>Source Content to Upload</h4>
+              <a onclick="add_upload()" class="btn btn-primary">Add Source Upload</a>
+              <br>
+              <br>
               <div id="source_rows"></div>
               <br>
               <hr>
@@ -94,48 +94,50 @@
   </div>
   <script>
     function add_upload(upload_json) {
-      /*
-       artifact_id
-       ibdf_dependencies
-       artifact_dependencies
-
-       suggested_source_location
-       suggested_source_url
-       expected_naming_pattern
-       expected_name_regex
-       sample_name
-       file_required
-       */
       var milliseconds = (new Date).getTime();
-      var input = $('<input>').attr('type', "file").attr('data-millis', milliseconds).attr('required', upload_json['file_required']).attr('pattern', upload_json['expected_name_regex']);
-      var sourceRows = $('#source_rows').append($('<div>').attr('id', 'i_' + milliseconds.toString()).addClass('fileupload_div').html(input));
-      var suggested_source_url = upload_json['suggested_source_url'];
-      var suggested_source_location = upload_json['suggested_source_location'];
-      var sample_name = upload_json['sample_name'];
-      var file_required = upload_json['file_required'];
-      var expected_name_regex = upload_json['expected_name_regex'];//todo test this!!!
+      var input = $('<input>').attr('type', "file").attr('data-millis', milliseconds);
+      var sourceRows = $('#source_rows');
+      sourceRows.append($('<div>').attr('id', 'i_' + milliseconds.toString()).addClass('fileupload_div').html(input));
 
-      var source_msg = '';
-      if (sample_name !== '') {
-        source_msg += '<strong>Sample Name:&nbsp;</strong>' + sample_name + '<br><br>';
-      }
-      if (suggested_source_location !== '') {
-        source_msg += '<strong>Suggested Source Location:&nbsp;</strong>' + suggested_source_location + '<br><br>';
-      }
-      if (suggested_source_url !== '') {
-        source_msg += '<strong>Suggested Source URL:&nbsp;</strong>' + suggested_source_url + '<br>';
-      }
+      //if upload_json is undefined then the user is adding an additional source record
+      if (upload_json !== undefined) {
+        input.attr('pattern', upload_json['expected_name_regex']);//todo work this
+        input.attr('required', upload_json['file_required']);
+        var suggested_source_url = upload_json['suggested_source_url'];
+        var suggested_source_location = upload_json['suggested_source_location'];
+        var sample_name = upload_json['sample_name'];
+        var file_required = upload_json['file_required'];
+        var source_msg = '';
 
-      var info = $('<a>').html('<i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>');
-      sourceRows.append($('<div>').addClass("upload_info_div").html(info));
+        if (sample_name !== '') {
+          source_msg += '<strong>Sample Name:&nbsp;</strong>' + sample_name + '<br><br>';
+        }
+        if (suggested_source_location !== '') {
+          source_msg += '<strong>Suggested Source Location:&nbsp;</strong>' + suggested_source_location + '<br><br>';
+        }
+        if (suggested_source_url !== '') {
+          source_msg += '<strong>Suggested Source URL:&nbsp;</strong>' + suggested_source_url + '<br>';
+        }
 
-      info.popover({
-        html: true,
-        container: 'body',
-        title: 'File Upload Information',
-        content: "<div><p>" + upload_json['expected_naming_pattern'] + "</p></div>" +
-        "<div><p>" + source_msg + "</p></div>"
-      });
+        var info = $('<a>').html('<i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>');
+        sourceRows.append($('<div>').addClass("upload_info_div").html(info));
+
+        info.popover({
+          html: true,
+          container: 'body',
+          title: 'File Upload Information',
+          content: "<div><p>" + upload_json['expected_naming_pattern'] + "</p></div>" +
+          "<div><p>" + source_msg + "</p></div>",
+          placement: 'bottom'
+        });
+      } else {
+        // user is manually adding an upload row
+        var btn_rm = $('<a>').addClass('btn btn-danger').text('Remove').on('click', function () {
+          $('#i_' + milliseconds.toString()).remove();
+          $('#x_' + milliseconds.toString()).remove();
+        });
+        sourceRows.append($('<div>').attr('id', 'x_' + milliseconds.toString()).addClass("upload_info_div").html(btn_rm));
+      }
 
       input.fileinput({
         msgNo: 'Please choose a file to upload. No',
@@ -230,7 +232,7 @@
     }
 
     $(document).ready(function () {
-      $(document).on('hide.bs.modal','#myModal', function () {
+      $(document).on('hide.bs.modal', '#myModal', function () {
         $('div.popover').remove();
       });
 
