--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -7,7 +7,7 @@
     width: 50%; /* or whatever you wish */
   }
 
-  .upload_info_div {
+  .inline_align_top_div {
     display: inline-block;
     vertical-align: top;
   }
@@ -73,10 +73,10 @@
                            {:prompt => '-- Select a Converter Type --'} %><br><br>
 
             <%= label_tag 'version', 'Version' %><br>
-            <%= text_field_tag 'version' %><br><br>
+            <%= text_field_tag 'version', nil, required: true, placeholder: 'Enter Your Version Number', title: 'Enter Your Version Number', width: '150px', maxlength: 75, size: 75%><br><br>
 
             <%= label_tag 'extension_name', 'Extension Name' %><br>
-            <%= text_field_tag 'extension_name' %><br><br>
+            <%= text_field_tag 'extension_name', nil, width: '150px', maxlength: 75, size: 75  %><br><br>
 
             <div id="uploads" style="display: none">
               <h4>Source Content to Upload</h4>
@@ -119,8 +119,8 @@
           source_msg += '<strong>Suggested Source URL:&nbsp;</strong>' + suggested_source_url + '<br>';
         }
 
-        var info = $('<a>').html('<i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>');
-        sourceRows.append($('<div>').addClass("upload_info_div").html(info));
+        var info = $('<a>').html('&nbsp;<i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>');
+        sourceRows.append($('<div>').addClass("inline_align_top_div").html(info));
 
         info.popover({
           html: true,
@@ -132,11 +132,11 @@
         });
       } else {
         // user is manually adding an upload row
-        var btn_rm = $('<a>').addClass('btn btn-danger').text('Remove').on('click', function () {
+        var btn_rm = $('<a>').addClass('btn btn-danger').text('X').on('click', function () {
           $('#i_' + milliseconds.toString()).remove();
           $('#x_' + milliseconds.toString()).remove();
         });
-        sourceRows.append($('<div>').attr('id', 'x_' + milliseconds.toString()).addClass("upload_info_div").html(btn_rm));
+        sourceRows.append($('<div>').attr('id', 'x_' + milliseconds.toString()).addClass("inline_align_top_div").html(btn_rm));
       }
 
       input.fileinput({
@@ -150,15 +150,22 @@
     }
 
     function submitPackage() {
+      var submit_form = true;
+
       $('[data-millis]').each(function (index, value) {
         $(this).attr('name', 'terminology_source_package[terminology_source_contents_attributes][' + index + '][upload]');
-
+console.log(value.value + '::' + $(this).attr('pattern'));
         if (value.value === '') {
-          return false;
+          submit_form = false;
+        } else {
+          submit_form = $('#new_terminology_source_package').valid();
         }
       });
 
-      $("#btn_submit").attr('onclick', 'return false;').html('<span><i class="fa fa-cog fa-spin fa-fw" aria-hidden="true"></i>Uploading...Please Wait</span>')
+
+      if (submit_form) {
+        $("#btn_submit").attr('onclick', 'return false;').html('<span><i class="fa fa-cog fa-spin fa-fw" aria-hidden="true"></i>Uploading...Please Wait</span>')
+      }
       $('#new_terminology_source_package').submit();
     }
 
